0.15
 - Fix minimal version of Mo::utils to 0.15 (for check_strings).

0.14 2024-04-22T11:30:49+02:00
 - Add 'onchange' parameter to Select.

0.13 2024-04-12T00:54:37+02:00
 - Fix DEPENDENCIES section in Input doc.
 - Rewrite check of step to Scalar::Util::looks_like_number().

0.12 2024-04-11T23:33:27+02:00
 - Add parameter 'step' to Input.
 - Fix doc of Element::A.
 - Fix doc of 'data_type' parameter.
 - Regen MANIFEST file.

0.11 2024-02-12T12:08:24+01:00
 - Add 'onclick' parameter to Input.

0.10 2024-02-04T17:11:53+01:00
 - API change: Add 'data' and 'data_type' parameters to Form.
 - API change: Add 'data' and 'data_type' parameters to Select.
 - API change: Remove 'options' parameter from Select.
 - Add DESCRIPTION section to Element doc.
 - Add Utils with data and data_type checks.
 - Add check for CSS class in Input, Option and Select.
 - Add check for data in Option.
 - Add default value for boolean values in Input.
 - Add doc for Input.
 - Add id and target to A element.
 - Add name to input element.
 - Add possibility of callback to 'data'.
 - Add tests for Button.
 - Add tests for Input.
 - Add tests for Options.
 - Add tests for Select.
 - Add tests for Select constructor errors.
 - Add tests for Utils.
 - Fix boolean value in Option for disabled and selected params.
 - Fix ERRORS sections in doc.

0.09 2024-01-06T19:35:12+01:00
 - Add check for CSS class.
 - Update to bigger version because issues in $VERSION.

0.01 2024-01-06T18:02:59+01:00
 - First version.