@@ -1,5 +1,6 @@
 0.15
  - Fix minimal version of Mo::utils to 0.15 (for check_strings).
+ - Fix typos in Input.
 
 0.14 2024-04-22T11:30:49+02:00
  - Add 'onchange' parameter to Select.
